devops/k8s/redis.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: provenance-redis
  namespace: humun-core-crypto
  labels:
    app: provenance-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: provenance-redis
  template:
    metadata:
      labels:
        app: provenance-redis
    spec:
      containers:
      - name: redis
        image: redis:6
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 1000m
            memory: 4Gi
        ports:
          - containerPort: 6379
            name: tcp-redis
        volumeMounts:
        - name: redis
          mountPath: /data
      volumes:
      - name: redis
        persistentVolumeClaim:
          claimName: provenance-redis
---
apiVersion: v1
kind: Service
metadata:
  name: provenance-redis
  namespace: humun-core-crypto
  labels:
    app: redis
spec:
  type: ClusterIP
  selector:
    app: provenance-redis
  ports:
    - protocol: TCP
      name: tcp-redis
      port: 6379
      targetPort: 6379
