devops/k8s/vs.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: provenance
  namespace: humun-core-crypto
spec:
  hosts:
  - "provenance.humun.us"
  gateways:
  - istio-system/ingressgateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: provenance
